# CNCPy

./: .gitignore  README.md  pyproject.toml  setup.cfg
.github/workflows/: python-package.yml
docs/: Basic Commands.md  Getting Started.md  Movement Commands.md
src/CNCPy/: Converting.py  Exceptions.py  __init__.py
src/CNCPy.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/CNCPy/premades/: __init__.py  lattice.py  shapes.py
test/: __init__.py  context.py  test_advanced.py  test_lattice.py
