[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "CNCPy"
version = "1.0.3"
authors = [
    { name="Roan Rothrock", email="roan.rothrock@hotmail.com" },
]
description = "Python cursor for writing large amounts of CNC GCODE."
readme = "README.md"
requires-python = ">=3.4"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/R-Rothrock/CNCPy"


